# ChangeLog for app-office/libreoffice-bin-debug
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice-bin-debug/ChangeLog,v 1.31 2013/07/20 22:13:43 dilfridge Exp $

*libreoffice-bin-debug-4.0.4.2 (20 Jul 2013)

  20 Jul 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  +libreoffice-bin-debug-4.0.4.2.ebuild:
  Version bump

  31 May 2013; Patrick Lauer <patrick@gentoo.org>
  -libreoffice-bin-debug-3.6.4.3.ebuild:
  Remove useless version

  25 May 2013; Agostino Sarubbo <ago@gentoo.org>
  libreoffice-bin-debug-3.6.6.2.ebuild:
  Stable for x86, wrt bug #470988

  25 May 2013; Agostino Sarubbo <ago@gentoo.org>
  libreoffice-bin-debug-3.6.6.2.ebuild:
  Stable for amd64, wrt bug #470988

*libreoffice-bin-debug-3.6.6.2 (20 May 2013)

  20 May 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  +libreoffice-bin-debug-3.6.6.2.ebuild:
  Version bump

  20 Dec 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  -libreoffice-bin-debug-3.5.5.3.ebuild, -libreoffice-bin-debug-3.6.3.2.ebuild:
  Remove older broken and sec-vuln versions.

  20 Dec 2012; Agostino Sarubbo <ago@gentoo.org>
  libreoffice-bin-debug-3.6.4.3.ebuild:
  Stable for x86, wrt bug #445032

  20 Dec 2012; Agostino Sarubbo <ago@gentoo.org>
  libreoffice-bin-debug-3.6.4.3.ebuild:
  Stable for amd64, wrt bug #445032

*libreoffice-bin-debug-3.6.4.3 (13 Dec 2012)

  13 Dec 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +libreoffice-bin-debug-3.6.4.3.ebuild:
  Version bump because of bug 445032

  24 Nov 2012; Agostino Sarubbo <ago@gentoo.org>
  libreoffice-bin-debug-3.6.3.2.ebuild:
  Stable for x86, wrt bug #440922

  24 Nov 2012; Agostino Sarubbo <ago@gentoo.org>
  libreoffice-bin-debug-3.6.3.2.ebuild:
  Stable for amd64, wrt bug #440922

*libreoffice-bin-debug-3.6.3.2 (24 Nov 2012)

  24 Nov 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +libreoffice-bin-debug-3.6.3.2.ebuild:
  Version bump

  06 Sep 2012; Tomáš Chvátal <scarabeus@gentoo.org>