@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST amd64-debug-libreoffice-base-3.6.6.2.tar.xz 798311800 SHA256 72d34f5afaec43ab6eb01aae8432b32de32aa587f714d6dedbd62fb02c10f82c SHA512 91ac988f43782287e8e9274f982d7f123293e38fffe0bc80227ce1d1d4115c5b831384f9b55aeb997d08ddb280ad7c3cde3e247461fc3586f186debdc8bd28c5 WHIRLPOOL 80b24e2b5dce5af3d3f6e7f9065edeab9dd78c13b834dbc8c482858446dfd2e136841f186b519b1690145970106cf19b65c198f006f76ee2f32fbd7918578d9b
 DIST amd64-debug-libreoffice-base-4.0.4.2.tar.xz 834170168 SHA256 be688e57f6d90e0a1481e6172ee718ea2ea18235534e17bfa8aa3eb938a76f70 SHA512 cc42f32aa0cb02b43bc3e07ef6543e033ca737b7acdf87624ef61facc72682a4cd37610d9ade5357f570129628eef7083a479fcd7e5cb74aff32c7d7f007278b WHIRLPOOL 10c385ccfd6e510df8b45f3ce4eb0aa075f125f388946eefa2c5522a8498b9d3effbe3f3a5f49df539226b818fdeefab9db87f9f43ed6f9fee1c203b835a3f23
@@ -26,25 +26,23 @@ DIST x86-debug-libreoffice-kde-4.0.4.2.tar.xz 784067860 SHA256 809b67a5dfa880e94
 DIST x86-debug-libreoffice-kde-java-3.6.6.2.tar.xz 752537256 SHA256 d0a28307dd48fe8d095b2bfe39ed884f059a44a2feea592bf22c84f3f4eb9726 SHA512 25c81bc77a2d24e4dace2fc5a710336c3e5d489047e98bd4a9e6877f92ea7e31078cc167c0be4f1d2774a94455e6dde0cbdcd22344e6a3f3e90c0c9979bbd7f7 WHIRLPOOL 6f7cd49e09a84f0ef06359832df844985ba598c6698f6ed3d3d69137d2641da86097a7c4439f2ce980b07d09dd399411f8b20751771705a03af4afcc7d0b6ca5
 DIST x86-debug-libreoffice-kde-java-4.0.4.2.tar.xz 788317636 SHA256 9a1f7458597ff559263dada46b5d8e22c4df06f816e1916a46a2f7d011bc343a SHA512 2e448143d3f20388473041057255c1dbcb70b0e30cb33f0c78c69d4f5e87d36565cd42c373ad1f241cea7dccc9a3d8230058b3cb38fda1e6218d4bb5a78448c0 WHIRLPOOL 7e3c462df097e0aa7d493233be7383ca04be9abdbc05d9c9f9236dabd6d535dad92875505e7645a5d2ad7ca87ca3d6a90a4510919e2e080652957f28a63bf980
 EBUILD libreoffice-bin-debug-3.6.6.2.ebuild 1766 SHA256 132b07ef5ddfaf53c19555117705e46b68da6dcc85607c86c8780e2ff1aea91c SHA512 96b0298ad42312c5a757c15fe7a7699bf1c207228594351f41a1527f2a5b208de3de472183f715c547da8a27bfb3e1ea2659d2d82c313b46bdfd929bb549ec3f WHIRLPOOL c3ca2fc6073afb25cd6d0ea744b44e683c5b6e37969b9bec205766ed95072689e888a0d9ebad06db216f5d90d614ffea44920035f7a49010b60de3a193a61aea
-EBUILD libreoffice-bin-debug-4.0.4.2.ebuild 1774 SHA256 64ab231e41112dbf136d7c067ea88b05157bb7c8ab1e177c01fbfb4c2e25fca9 SHA512 9b1e64106424a33930171ec37ab11c72af42d2c3afd7d542452c97bdc2cb95a08b08178363884f69e933fcfd90d1e45919651dde7c7f229fdd41d014e0792b39 WHIRLPOOL cc457a6ac463024539c4e936c443d1bc3019fee43eea162cc292b2addca544b92ad124cd9245167a42fdcb67dcdfee906474a3756f19a2daf90cd87f8e08ce39
-MISC ChangeLog 4685 SHA256 ca3871262d9a2f698ac0bc20ab64f437c3386e06c7238a326a1a8afdbba5e64f SHA512 c5ec679efc707d3dc2058d91fb88f5d2e5903fe4b534a2c8f007500a41da371904ceb6782392974abba390eccc7019575200ffc6e8ec68dd9e5a41f14c3ab08f WHIRLPOOL 0c293d0d28916b8d6e7faa92d9ff6d9ce3cee66e1a16fdd0478dfefc3ee36e69b30f44d6431670b8ab3294a133ed5ce686fa2058cdcb758632cb2c350e918adb
+EBUILD libreoffice-bin-debug-4.0.4.2.ebuild 1767 SHA256 927c79bd1856d88d6de8b52afc4318879f689d74c043223e357ea919231fef5a SHA512 0c802b9824acc1c69a81e548dd88f4b5a723bc7ea57b837e4b5d5b13e341966ffe9fe9de87188e69385d9ae106bca7a81dd5ea1c00b6291cced38bd6fed2b597 WHIRLPOOL 979dfeffe7b5ca3443d655ab163c293b4f26db0538955366364339dd5dfc68650e26ed95d3990b56ade411e7e5e8f9e44833696d3e56d6f48eceddd57149fb13
+MISC ChangeLog 4805 SHA256 42422a8f88fd33f03c6303e310cfdb435a35d415580786a9ea326c2e0f5cfeb6 SHA512 15f0d4a8d96243b67e7485691141a93b55b2daafda83fb928470ab973e181b12075dea22452733700af5a3a6c8a420eeb41e037a584ca4e3cb1c6307ef730f7c WHIRLPOOL 4741ffab4f2f41b10272222ba80b3bb1d5f1f4c4705819ed24895f92db385ed247795454fb159c31c81ee88b6fed4e087367402a616f5b22e32a085725acd110
 MISC metadata.xml 390 SHA256 deb4144f69c803f7b16a6dc3235b720d0f680f491a91e73db7b2866e7d9af973 SHA512 c1a1a593eeb718c3eddb1e37a81cd66a9df3a31f4ea7e0c1419e66098db03025329b2cd7a66bd86d4df8005412a08e7a1a1f7e6100eeeee6ecaef406d3bf52de WHIRLPOOL 1bb63d4848fb55fe79e9764bcdd6a764e3162545d58b1fa4f812ad999bfada1491bd19a84c8ff6675e2f05da5e4ab97bdee3ef14d7f081961c5fd706b8b66e8c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQJ8BAEBCABmBQJR6wwWXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
-QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOca/UQALuwx0jQszf33ASN9/esh8GO
-FAvHKjYiGl0Ii6siOhlwjkhx/bDp6DipMtEWo8XVuw/6jsJ3YWFz8DAoWw7iVb5e
-I6jU6/kKRdI04fYaQrA2Y8UDfF3ytcT6Ihv6neIV/ZP1WgTP7XrcJEgBy9raal3G
-7qIRzeF9g/L7Vjor4Ld8tcVKNJxRB5Du0//wmfnRDy6YqrZi3nFjyGeubsNVKGMn
-6y+2xvuUHqeghNkQCfp+8Qx4tW7JlY2jUZFOykMc6RNEO0wRrgHEwXi1VUS4Pqhw
-iyFIay9lkFg9bCJ0FtapE03jHXjHctyDozwWZAZCQCaM/jyKEmrA5vSineK4zGsQ
-6pufm19L8qaTib7GGsYS0okZaGljAebUWgTrSVeuGeThH4oh/lZogq/f2S5zSNmL
-Q6POMX0UJ3J6lqquAZpE6lVmLjqJzNAbA5EmPKj36rglxEjrnH1y3gkxI40PUArf
-DkPJogBxOzm1fJMFioQ5jwGWjgjh2y+SvM4XXB4ldJNvAmumIMIxo3ws4pl/vRoK
-SJx+zWY2GsL9kW1mXaH1jJ9lB/1FfwlPA+ME0VYpVpQ0kfvvihubVxmLGphprGjR
-YIlqM2p5TGYnZWOg/FDJeVj59zmnpvxOh66+b3CnCbwDtWDzDmX09nArMOHzheWy
-fqT519jiJMZlVL/tC2lk
-=01Ej
+iQIcBAEBCgAGBQJR9SToAAoJELp701BxlEWfv1wQAImFhBFpbDiu86QwIGTMg5v6
+AUSWLnSYoyHRSjMDEIL3jzeuDzXElgtUSB3rAYYySzNeWnBXl8vbFaphKQVl31dp
+ISYZ0VVU9R6ZZ3Vs8a3l5l5Ht88cIZpANX/3ZYCNHsIXTpSTcHZJYqfvPJaKUvfq
+3y7si/FbZi/2Bj9kxBKzuYOpDx8RHMewW8eYQCEi90DRsTNYX9GwmhxrBa0KnQ6z
+PPQ1tzXe7eQvl/JzGr63t9wd1LFdPoT/cvCYrtEHYUFxmHq5V4VnrdFmueYPwsv1
+KD06VTdfLV5lttys9eALuthQX5MB5jGHCaKlIGd2MzHbh7wPIioYtTTN8hmvUU4o
+u/u2B27/kQV/BmmYMskNFtqFI8bcIC0Hw3lh6YDHz8R1xeh6cKr9I5UiL16igM29
+y3bh+hpgcE5cUZ0VbrfZIQZRsQJ9a2GfVqXTkQ7V+NaTfVl7J6ecSWCP50qVTcZF
+K0sGBwRgjPGa5FwKRgBQCDsa+kcuGM64GP80QdonkdehhNpVsVeJdEqSv7FlkbE/
+ZG5fnRE2C2CWO+ddtopvjZY97gsTHjAQ9UQr5LoDZukofGKQQtdCSNM2YIFhZHCo
+cvt7b4mhh2Ee1ryzmzmayFrJL6QdCjdoRlWtgIX1zsegnDdTUuHl5kXOC1dfvAQE
+hdfViTnksNwsdqdlDIuY
+=6WoS
 -----END PGP SIGNATURE-----
