@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX 50-libreoffice-bin 158 SHA256 6c6cebcce51b639545a42c0b9cc6268f0ce1e8bb9d7d22bb11e5ebd1448638e9 SHA512 2d1158f48ac80f9212578d020e5659e777ff494adc3abc94438cec6890b88741f92ea2ed3bb4585ffdabe531d55c6938ca9408e9ece5a438e67d480eb406ed50 WHIRLPOOL 47d4187edca8b343378a2f58e63b0c10cc11f11b21702064fe102003e2bb6eaf3de660128442238e1c040b97ccaa1ee45d8089713c3a62a1dacfe5a72f1c6ee2
 DIST amd64-bin-libreoffice-base-3.6.6.2.tar.xz 67523164 SHA256 e2d1778e7b489d762e5d909260522eebabfe1db75961ff5d68b782df8fff7bf4 SHA512 ccdc8237fd85f63469497b5784dc597fed1d2aa5e81115943fce5d03264cb72fe71351d9a3fdca95e2d7a3f1923d6aff475e5c4b0a3df08a9d9a939cdda56ab6 WHIRLPOOL e6a52d1637a06c29571e0425586c504543f5a19ecd06a3db6fb97bdd11d1b7a91e025c17133d154c0e4a7ddfeba103f6284db094dc6a66588fe054e69529d483
@@ -27,25 +27,23 @@ DIST x86-bin-libreoffice-kde-4.0.4.2.tar.xz 67144016 SHA256 9869dd633778218445a1
 DIST x86-bin-libreoffice-kde-java-3.6.6.2.tar.xz 71271716 SHA256 cf35180902eab53d4b28c198d472e222e12af7a9e4b95ad55118eb4fbe59f891 SHA512 8f041749eefe317d0c23f67a4e1c00e7f8558b90dcc44c205b3e2e409ef27e89d2589a2123761e765032a806c3517dd8a73cb3d0c0a1d414652b5c4432259360 WHIRLPOOL 8f649942b27a3e1ae554505e70519e2c74507681241f5facd6f30d4eb209c1695fe0cf6674bce3aa092113d4d9ae34ea60f9d2ea53d815c9514f259b0b2fc25a
 DIST x86-bin-libreoffice-kde-java-4.0.4.2.tar.xz 70649076 SHA256 393483f5867935edcf3d12e5505d22a7a199cc8c103908ba61a4babd45a5e7af SHA512 298f6265089be935b66d688a22e158efa9b9731a7304e547f3f353347379fbf4ed3459c337fc8573726a721e9b11556fc3a9fc25e667e91e6fa26defed61fb4e WHIRLPOOL b0a5ebcc084f234256481c89ebb6b9b655f1ad707c97e3f709adfacac8024a2654e74e764d2a34fb2db21a67f0d044db101977cac7de45e4425b906f7119e5c8
 EBUILD libreoffice-bin-3.6.6.2.ebuild 4815 SHA256 740c297ac6e117b396d7f648ff2f2b9300924a9cad092a2f52e05de265536d43 SHA512 dbb67aecdbe913bbd62e8532f628646aca126b4f911f131b77201e1e2a4749a05f141da3d60d0151df64de38d536a1a6b345b035c4d3bf2342f0ae66f68bba64 WHIRLPOOL 0ba7b893798c0fe29c30c6015e23d6c64b1b53a66bac48ba559720778c873eb74e1453ecd5c0945a046cccd5e565899ddd3fe9b52c2b5e3a92e77f752ae6848c
-EBUILD libreoffice-bin-4.0.4.2.ebuild 4834 SHA256 8be7bc5bff18ad9c87187a1dce7c7d55d6e591bdeaa859d7232da96e8976a688 SHA512 84f41789a0d146c0e31bb2f13eb4024b7024134d005029f45fd048560ee8368fc3b2b3374b2465dae7a53ec5964143731927a7c91653f562db460387f0a56a7d WHIRLPOOL 2f825195de1f62111f443471236f8cddf2f85de20a5115048afec95c039e5b86493b3d7b66b01af7e1acbca19b7a5a5f46c8b033ccca5d9a1eb4af44a73c076d
-MISC ChangeLog 16803 SHA256 6bf865af6ed18737d79f11c82773108791341c432852d019241278b1d0f508f8 SHA512 cace0d872ed44eadeb3d55e29fb4fc7ece25882610af782fbd1559c51a014452817f13d3ed928cb7c35a0a43ea73e03a6dc4ba9dca2e3deb420df56b9a7659de WHIRLPOOL bf0d1af450ad92aaaf1e1146da99b35f6c7f56f766cb7de74c4897cc310a91595c304b0574adb95eae9a984655a3bb91f715212889ef65dde5fa7ca31c1fe5cd
+EBUILD libreoffice-bin-4.0.4.2.ebuild 4827 SHA256 5fac7b9d2353f96c16535b3ddff73aa97c44c978b5802616971dbea28d97c870 SHA512 596da2f89ce2165fd732e648b42faaee0f265e4ddef9a42ab1f20798acdc35a6dee5cf34fbb882f00bcf54f5d85c8ed683395396e6821930b8de85182bd2ff30 WHIRLPOOL fdacd6489ea48b550c10c085d29c891baa989589152de80a644e562b3b1b40205c8f5d8411beb1514fe1909e1490211c55a74c472ee217f5dd9b9e40ee4a0f6f
+MISC ChangeLog 16915 SHA256 3a12ac21d59f2fda8aaffcdf747d8824cce804f6e3982e1d67b474c0513e6b7d SHA512 5e6994b125f0ea5b3093c9d79a9000142478e72f4b0b11b953386b9e8b2b5a6f6276ae4bd96350e1d7670fe9f423386808c944b7d0d6d1e4e17efa4c902f646e WHIRLPOOL 123464a685b2981de443f8f1b4ae2f42e9de5b09fb400425828ff4671da2e8f6c2193c407057b514e59949a7e3e895f07f14e91b14361ca3523ab5745922e5fb
 MISC metadata.xml 409 SHA256 92a42f3ef25ede1bee68ec939cd4e0d88bbada54d90dab225f06bfc02b8bd498 SHA512 5a383da805155e80920620854f04e1bb9fcfe0764d0258ec95267c3229dae50cdb5f2cd83fbdc4cb7a856e079c696bb6f73d9aefec2fabef9317e391fd5db9ab WHIRLPOOL 158b0614005477cb448240a8f36e35fc8768c9ba0b83e71b1502dd1725fabafd4031d7c40a33030c683a14a38dad318f47db90712aab6d7ed4150fd26000193b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQJ8BAEBCABmBQJR9AbpXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
-QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcsdIQAN6fUyNdmGCJUImgKGlHg/fp
-7ie4nSMx0GlbbjMRY3QLhH/ZMdlhKhF1qEVFOktFKhnUEPvzQ44ro0oYNkhPeVmX
-FLL0qvyM8gtiTz5Spif6oqjzK7uQYnDWcjtOCdkLMWQfk1V5HX2LaSYRcQkQe2MC
-MtGJHjWHShexnse8G0Es2pjlTDZxqA/nIMZBpmQYYhzslK9kYgG64q/MsLUkhBcS
-sfkda3RXdj98TZYlrLvdEqilZizYude9G+60l4TqIQLRrbe9rUIbOPOtfGdE+EL8
-hVBD4clcCjs1PW5f/kM1lRI4RKAGpLtmetqVUl+4NOFoOYSwx6822Ot+rzNe8hOV
-pKD1gCnMEpCu8mUUxdTT/dQ9y2SiG7cVd8AkkKiKLm3yLPeMBVOwdRFTTM5Tni3E
-CfCTNL7OgfWL2BFlnWPw15gcmCsNnaK7AsNQgHkqfHP76JuMHCwgcdxyumV1N9LW
-RD9zIO9jg/GG0ei+BIp9T38pL7ZOmT7JOvxt6g2dr08OCAM+uYzJa9V78+lOD2Ug
-oKAo6ysGK0qWut1eExmwQdXkfNFTGhpCJy1Zq3Fi30ORdDZTQore686ho/L5dT7Z
-kBeApq7eg02QlG2hhJRvQV5L5y3EqJEFSXJnc/af7v3LUXwxiBZ0pZy5n5wWfl2O
-Pl6n7Nynl/dBYLTIpQJW
-=7/cS
+iQIcBAEBCgAGBQJR9STiAAoJELp701BxlEWfSdYP/2qlIb8Ox4Qsn8SezsXju3+R
+MbjPVOnCAhG3hO8t2VkyhGsZ90CB9CwjvHRUPT00x6XZ7K6kJGG7PshNhr+ZsmjK
+ZYSKqe5DdN06UyMsdfzUzme7DWOTxWqygkfzGh+QNbIRc2oRIXsUUM1XODvqrF63
+TPj1SfxShg+y+W48aIT8qck+jQ3YOLiUUPiXq3ipTT5sXtPJGjhkOoOEivLzpW/r
+yaNHx0VwsP/8hKWRFUO099j7XMO09Stt02Zyxq+71Ludfo2f9SCt9ewjz15zLWCT
+AQTVrR0g7XhfVR7/v66yqSuAI8RUCEU7KxaPq8RPtN9pLz9k1SU6ISul6S80CSFf
+qJVkNta+aEdMQo1VqgIiJLUAzlMvy/1sxYR05e/esvIsCsIgP1pC5LxDWA0ZokeT
+07MZ5kfA9aFUkCimyRP2+bziwsp+C4GKsRyRYQeSACJ7VN7xEsI1VSeIM/Djl+AM
+V06wAJqzOwRMWfhMq/+58VKoEMrt0MybQ86PT0LfwtNcBaDerfi0eqL3qbsmgfON
+AHYp0BY6OU58dD+xvcCPXFLlIAnqTKOIkPWxV3YJ7uFjxqX30m3agB4YyN75n0WU
+Chi8m5sT5CqRWJ+BpPQMBONi69/A6gyzq25WV4bE/8qD7tuJQZyr72Hu615LB3yR
+VHS471VvXIGg9egpi1R6
+=Dg+9
 -----END PGP SIGNATURE-----
