@@ -1,6 +1,9 @@
 # ChangeLog for app-office/libreoffice-bin
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice-bin/ChangeLog,v 1.110 2013/07/27 17:41:49 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice-bin/ChangeLog,v 1.111 2013/07/28 14:04:22 ago Exp $
+
+  28 Jul 2013; Agostino Sarubbo <ago@gentoo.org> libreoffice-bin-4.0.4.2.ebuild:
+  Stable for amd64, wrt bug #477532
 
   27 Jul 2013; Andreas K. Huettel <dilfridge@gentoo.org>
   libreoffice-bin-4.0.4.2.ebuild:
