@@ -1,6 +1,10 @@
 # ChangeLog for app-office/libreoffice-bin-debug
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice-bin-debug/ChangeLog,v 1.31 2013/07/20 22:13:43 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice-bin-debug/ChangeLog,v 1.32 2013/07/28 14:04:28 ago Exp $
+
+  28 Jul 2013; Agostino Sarubbo <ago@gentoo.org>
+  libreoffice-bin-debug-4.0.4.2.ebuild:
+  Stable for amd64, wrt bug #477532
 
 *libreoffice-bin-debug-4.0.4.2 (20 Jul 2013)
 
